--- a/.gitignore
+++ b/.gitignore
@@ -24,14 +24,16 @@
 .DS_Store
 *.pem
 
-# debug
+# debug logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
+# env files (keep local environment variables out of source control)
+.env
+.env.local
+.env.*.local
 
 # vercel
 .vercel
